Gemini API Working

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
             <button type="submit">Generate My Travel Plan</button>
         </form>
 
+        <div id="loading-message" class="loading-message">Generating your travel plan...</div>
+        <div id="travel-plan-container" class="travel-plan-container"></div>
+
         <section class="section-title">
             <h2>What Our Travelers Say</h2>
             <p>Read about their experiences with our AI travel planner</p>
