--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="budget">Budget per person (USD)</label>
+                    <label for="budget">Budget per person (INR)</label>
                     <input type="number" id="budget" name="budget" placeholder="Enter your budget" required>
                 </div>
 
