--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         <form class="travel-form">
             <div class="form-grid">
                 <div class="form-group">
-                    <label for="travelers">Number of Travelers</label>
-                    <input type="number" id="travelers" name="travelers" min="1" placeholder="How many people?" required>
+                    <label for="travelers">From</label>
+                    <input type="text" id="from" name="from" placeholder="From where are you going?" required>
                 </div>
-                
+
                 <div class="form-group">
                     <label for="destination">Destination</label>
                     <input type="text" id="destination" name="destination" placeholder="Where would you like to go?" required>
