--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
   </head>
   <body>
     <header class="header">
-      <h1>AI Travel Planner</h1>
-      <p>
-        Experience personalized travel planning powered by artificial
-        intelligence
-      </p>
-    </header>
+        <!-- <div class="logo">
+          <img src="./assets/logo.png" alt="AI Travel Planner Logo" />
+        </div> -->
+        <div class="header-content">
+          <h1>AI Travel Planner</h1>
+          <p>Experience personalized travel planning powered by artificial intelligence</p>
+        </div>
+        <nav class="navbar">
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#bookings">Bookings</a></li>
+            <li><a href="#travel-form">Plan a Trip</a></li>
+            <li><a href="#Blogs">Explore Blogs</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
 
     <div class="container">
       <section class="features">
@@ -229,6 +240,18 @@
         </div>
       </section>
     </div>
+
+    <footer class="footer">
+        <div class="footer-content">
+          <p>© 2025 AI Travel Planner. All rights reserved by Sumit Akhuli</p>
+          <p>Designed for seamless and smart travel experiences.</p>
+        </div>
+        <div class="social-icons">
+          <a href="https://github.com/akhulisumit" target="_blank">GitHub</a>
+          <a href="https://www.linkedin.com/in/sumit-akhuli/" target="_blank">LinkedIn</a>
+          <a href="https://www.instagram.com/akhulisumit/" target="_blank">Instagram</a>
+        </div>
+      </footer>
 
     <script src="script.js"></script>
   </body>
