Updated prompt and better results

--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
   </head>
   <body>
     <header class="header">
-        <!-- <div class="logo">
+      <!-- <div class="logo">
           <img src="./assets/logo.png" alt="AI Travel Planner Logo" />
         </div> -->
-        <div class="header-content">
-          <h1>AI Travel Planner</h1>
-          <p>Experience personalized travel planning powered by artificial intelligence</p>
-        </div>
-        <nav class="navbar">
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#bookings">Bookings</a></li>
-            <li><a href="#travel-form">Plan a Trip</a></li>
-            <li><a href="#Blogs">Explore Blogs</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
-      </header>
+      <div class="header-content">
+        <h1>AI Travel Planner</h1>
+        <p>
+          Experience personalized travel planning powered by artificial
+          intelligence
+        </p>
+      </div>
+      <nav class="navbar">
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#bookings">Bookings</a></li>
+          <li><a href="#travel-form">Plan a Trip</a></li>
+          <li><a href="#Blogs">Explore Blogs</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
     <div class="container">
       <section class="features">
@@ -181,20 +184,20 @@
 
       <div id="loading-container">
         <div id="loading-message" class="loading-message">
-            <script
-              src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs"
-              type="module"
-            ></script>
-            <dotlottie-player
-              src="https://lottie.host/e41589ce-bc73-48bd-a289-2cfcc1056e7a/8XtF0rN8C8.lottie"
-              background="transparent"
-              speed="1"
-              style="width: 300px; height: 300px"
-              loop
-              autoplay
-            ></dotlottie-player>
-            <p>Generating your travel plan...</p>
-          </div>
+          <script
+            src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs"
+            type="module"
+          ></script>
+          <dotlottie-player
+            src="https://lottie.host/7464b8f0-1b22-480e-bbe9-40b21e31d5ab/Lx8hlVArnH.lottie"
+            background="transparent"
+            speed="1"
+            style="width: 300px; height: 300px"
+            loop
+            autoplay
+          ></dotlottie-player>
+          <p>Generating your travel plan...</p>
+        </div>
       </div>
 
       <div id="travel-plan-container" class="travel-plan-container"></div>
@@ -242,16 +245,20 @@
     </div>
 
     <footer class="footer">
-        <div class="footer-content">
-          <p>© 2025 AI Travel Planner. All rights reserved by Sumit Akhuli</p>
-          <p>Designed for seamless and smart travel experiences.</p>
-        </div>
-        <div class="social-icons">
-          <a href="https://github.com/akhulisumit" target="_blank">GitHub</a>
-          <a href="https://www.linkedin.com/in/sumit-akhuli/" target="_blank">LinkedIn</a>
-          <a href="https://www.instagram.com/akhulisumit/" target="_blank">Instagram</a>
-        </div>
-      </footer>
+      <div class="footer-content">
+        <p>© 2025 AI Travel Planner. All rights reserved by Sumit Akhuli</p>
+        <p>Designed for seamless and smart travel experiences.</p>
+      </div>
+      <div class="social-icons">
+        <a href="https://github.com/akhulisumit" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/sumit-akhuli/" target="_blank"
+          >LinkedIn</a
+        >
+        <a href="https://www.instagram.com/akhulisumit/" target="_blank"
+          >Instagram</a
+        >
+      </div>
+    </footer>
 
     <script src="script.js"></script>
   </body>
