--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
 
       <div id="travel-plan-container" class="travel-plan-container"></div>
 
+      <div id="destination-image" class="destination-image-container"></div>
+
       <section class="section-title">
         <h2>What Our Travelers Say</h2>
         <p>Read about their experiences with our AI travel planner</p>
